--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-joyride": "^2.3.1",
     "react-loader-spinner": "^4.0.0",
+    "react-password-checklist": "^1.3.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
