--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{  
+{
   "name": "goit-react-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
     "classnames": "^2.3.1",
     "gh-pages": "^3.2.3",
     "modern-normalize": "^1.1.0",
@@ -39,7 +40,7 @@
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "predeploy": "npm run build",
-    "deploy": "netlify deploy -p"  
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
