--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
-    "bootstrap": "^5.1.1",
+    "bootstrap": "^5.1.0",
     "classnames": "^2.3.1",
     "gh-pages": "^3.2.3",
     "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.2",
     "react-joyride": "^2.3.1",
